# tg-archiver

./: .gitignore
.agents/rules/: tg-archiver-arch.md  tg-archiver-core.md  tg-archiver-tools.md
.agents/tasks/2026-02-28_add-telegram-operation/: 01_plan.md  03_summary.md
.agents/tasks/2026-02-28_channel-group-resolution/: 01_plan.md  03_summary.md
.agents/tasks/2026-02-28_create-task/: 01_plan.md  03_summary.md
.agents/tasks/2026-02-28_onboard-codebase/: 01_plan.md  03_summary.md
.agents/tasks/2026-02-28_tui-view/: 01_plan.md  03_summary.md
.agents/tasks/2026-03-01_add-telegram-operation/: 01_plan.md  03_summary.md
.agents/tasks/2026-03-01_archive-worker-pool/: 01_plan.md  03_summary.md
.agents/workflows/: add-media-filter-category.md  add-telegram-operation.md  debug-flood-wait.md  monitoring-mode-phase.md  pause-resume.md  state-schema-change.md  summarize-assumptions-and-shortcuts.md  tui-view.md
repo/: .env.example  Cargo.toml  append_app_events.py  insert_upload_views.py  migrate_app.py  migrate_archive.py  patch_app.py  test_reply_to.rs  test_upload.rs
repo/.agents/tasks/2026-03-01_start-archive/: 01_plan.md  03_summary.md
repo/.agents/tasks/2026-03-02_fix-auto-create-topic-validation/: 01_plan.md
repo/src/: error.rs  main.rs
repo/src/app/: mod.rs
repo/src/archive/: mod.rs
repo/src/config/: mod.rs
repo/src/monitor/: mod.rs
repo/src/state/: mod.rs
repo/src/telegram/: mod.rs
repo/src/tui/: archive_progress.rs  filter_config.rs  mod.rs  monitoring.rs  upload.rs
repo/src/upload/: mod.rs
(+66 files in other folders)
