[package]
name = "tg-archiver"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
dotenvy = "0.15.7"
grammers-client = "0.9.0"
grammers-mtsender = "0.9.0"
grammers-session = "0.9.0"
grammers-tl-types = "0.9.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
